# dynarule

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  rules.json
.github/workflows/: ci.yml
examples/: advanced.rs  simple.rs
src/: config.rs  engine.rs  error.rs  lib.rs  parser.rs  types.rs
tests/: engine_tests.rs  integration.rs  parser_tests.rs
