[package]
name = "dynarule"
version = "0.1.0"
edition = "2024"
description = "A flexible, JSON-based rule engine for dynamic condition evaluation"
authors = ["Haileyesus Haileyesusbe@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/haileyesus2433/dynarule"  # Update with your repo if applicable
keywords = ["rule-engine", "json", "logic", "configurable"]
categories = ["data-processing", "utilities"]

[dependencies]
serde = {version="1.0.219",features = ["derive"]}
serde_json = "1.0.140"
tera = "1.20"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_bench"
harness = false
